--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="css/styles.css">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Kokoa Talk</title>
+    <title>Welcome to Kokoa Clone</title>
 </head>
 
 <body>
-    <div id="status-bar">
+    <div class="status-bar">
         <div class="status-bar__column">
             <span>No Service</span>
             <i class="fas fa-wifi"></i>
@@ -21,6 +23,20 @@
             <i class="fas fa-battery-full"></i>
             <i class="fas fa-bolt"></i>
         </div>
+    </div>
+    <div>
+        <header class="welcome-header">
+            <h1 class="welcome-heade__title">Welcome to Kokoa Clone</h1>
+            <p class="welcome-heade__text">If you have a Kokoa Account, log in with your email or phone number.</p>
+        </header>
+
+        <form id="Login-form">
+            <input type="text" placeholder="Email or phone number" />
+            <input type="password" placeholder="Password" />
+            <input type="submit" value="Log In" />
+            <a href="#">Fined Kokoa Account or Password</a>
+        </form>
+
 
     </div>
 
