--- a/challenge10.html
+++ b/challenge10.html
@@ -9,11 +9,26 @@
 
 <body>
 
-    <div>
+    <div class="playlist__column">
         <!--X icon-->
         <span>Playlist</span>
     </div>
 
+    <div class="current-music">
+        <div class="current-music__square squarestyle">
+            <!--picture-icon-->
+        </div>
+        <div class="current-music__property">
+            <span class="current-music__song-name">Random love</span>
+            <span class="current-music__singer-name">by Divay kapoor</span>
+        </div>
+    </div>
+
+    <div class="btn__column">
+        <div class="btn__play"></div>
+        <div class="btn__favorite"></div>
+        <div class="btn__add-to-List"></div>
+    </div>
 </body>
 
 </html>
