--- a/challenge11.html
+++ b/challenge11.html
@@ -10,12 +10,119 @@
 </head>
 
 <body>
-    <header>
-        <!--icon-->
-        <!--icon-->
-        <!--icon-->
-    </header>
+    <div class="header">
+        <i class="fas fa-bars"></i>
+        <span>library</span>
+        <i class="fas fa-shopping-bag"></i>
+    </div>
+    <div class="search-box">
+        <form id="text">
+            <input type="text" placeholder="Search books...." />
+        </form>
+        <i class="fas fa-search"></i>
+    </div>
 
+    <span class="library__li">Book of the day</span>
+    <div class="library__book-section">
+        <div>
+            <img class="library__current-square" src="https://m.media-amazon.com/images/I/512eZ2k0z0L.jpg"
+                class="library__current-square" />
+        </div>
+        <div class="library__book-information">
+            <div class="library__book-first">
+                <span id="book-first__h1">No Fixed Abode</span>
+                <span id="book-second__h2">Journey Through</span>
+                <div class="star">
+                    <i class="fas fa-star fa-sm selected"></i>
+                    <i class="fas fa-star fa-sm selected"></i>
+                    <i class="fas fa-star fa-sm selected"></i>
+                    <i class="fas fa-star fa-sm selected"></i>
+                    <i class="fas fa-star fa-sm unselected"></i>
+                </div>
+            </div>
+            <div class="library__book-middle">
+                <div class="btn-middle">
+                    <span class="text-middle">Journey</span>
+                </div>
+                <div class="btn-middle">
+                    <span class="text-middle">Biography</span>
+                </div>
+            </div>
+            <div class="library__book-last">
+                <div class="bookmark">
+                    <i class="fas fa-bookmark fa-sm"></i>
+                </div>
+                <div class="btn__book-now">
+                    <span class="text-book">book now</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <span class="library__li">Top Adventures</span>
+    <div class="library__adventure-section">
+        <div class="library__adventure-small-section">
+            <img src="https://images.penguinrandomhouse.com/cover/9780525556084" class="small-square" />
+            <div class="small-star">
+                <i class="fas fa-star fa-sm selected"></i>
+                <i class="fas fa-star fa-sm selected"></i>
+                <i class="fas fa-star fa-sm selected"></i>
+                <i class="fas fa-star fa-sm selected"></i>
+                <i class="fas fa-star fa-sm unselected"></i>
+            </div>
+        </div>
+        <div class="library__adventure-small-section">
+            <img src="https://embed.cdn.pais.scholastic.com/v1/channels/tso/products/identifiers/isbn/9780439574242/primary/renditions/700?useMissingImage=true"
+                class="small-square" />
+            <div class="small-star">
+                <i class="fas fa-star fa-sm selected"></i>
+                <i class="fas fa-star fa-sm selected"></i>
+                <i class="fas fa-star fa-sm selected"></i>
+                <i class="fas fa-star fa-sm selected"></i>
+                <i class="fas fa-star fa-sm unselected"></i>
+            </div>
+        </div>
+        <div class="library__adventure-small-section">
+            <img src="https://i.pinimg.com/736x/5b/dc/97/5bdc9708176f2972f02d829e24ed0362--graphic-design-books-design-illustrations.jpg"
+                class="small-square" />
+            <div class="small-star">
+                <i class="fas fa-star fa-sm selected"></i>
+                <i class="fas fa-star fa-sm selected"></i>
+                <i class="fas fa-star fa-sm selected"></i>
+                <i class="fas fa-star fa-sm selected"></i>
+                <i class="fas fa-star fa-sm unselected"></i>
+            </div>
+        </div>
+        <div class="library__adventure-small-section">
+            <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1541083701l/42519279._SY475_.jpg"
+                class="small-square" />
+            <div class="small-star">
+                <i class="fas fa-star fa-sm selected"></i>
+                <i class="fas fa-star fa-sm selected"></i>
+                <i class="fas fa-star fa-sm selected"></i>
+                <i class="fas fa-star fa-sm selected"></i>
+                <i class="fas fa-star fa-sm unselected"></i>
+            </div>
+        </div>
+    </div>
+    <span class="library__li">Popular authors</span>
+    <div class="library__author-section">
+        <img src=https://i2-prod.mirror.co.uk/incoming/article1930704.ece/ALTERNATES/s615/0_George-RR-Martin.jpg
+            class="library__author-square">
+        <div class="library__author-information">
+            <div class="library__author-title">
+                <span class="author-name">George Raymond</span>
+                <span class="author-name">Richard Martin</span>
+            </div>
+            <div class="author-property">
+                <span>Modern American science fiction writer, screenwriter, producer and editor, winner of many literary
+                    awards.</span>
+            </div>
+        </div>
+
+    </div>
+
+
+    <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
 
 </body>
 
