--- a/challenge11.html
+++ b/challenge11.html
@@ -25,8 +25,8 @@
     <span class="library__li">Book of the day</span>
     <div class="library__book-section">
         <div>
-            <img class="library__current-square" src="https://m.media-amazon.com/images/I/512eZ2k0z0L.jpg"
-                class="library__current-square" />
+            <img class="library__current-square square-border"
+                src="https://m.media-amazon.com/images/I/512eZ2k0z0L.jpg" />
         </div>
         <div class="library__book-information">
             <div class="library__book-first">
@@ -61,7 +61,7 @@
     <span class="library__li">Top Adventures</span>
     <div class="library__adventure-section">
         <div class="library__adventure-small-section">
-            <img src="https://images.penguinrandomhouse.com/cover/9780525556084" class="small-square" />
+            <img src="https://images.penguinrandomhouse.com/cover/9780525556084" class="small-square square-border" />
             <div class="small-star">
                 <i class="fas fa-star fa-sm selected"></i>
                 <i class="fas fa-star fa-sm selected"></i>
@@ -72,7 +72,7 @@
         </div>
         <div class="library__adventure-small-section">
             <img src="https://embed.cdn.pais.scholastic.com/v1/channels/tso/products/identifiers/isbn/9780439574242/primary/renditions/700?useMissingImage=true"
-                class="small-square" />
+                class="small-square square-border" />
             <div class="small-star">
                 <i class="fas fa-star fa-sm selected"></i>
                 <i class="fas fa-star fa-sm selected"></i>
@@ -83,7 +83,7 @@
         </div>
         <div class="library__adventure-small-section">
             <img src="https://i.pinimg.com/736x/5b/dc/97/5bdc9708176f2972f02d829e24ed0362--graphic-design-books-design-illustrations.jpg"
-                class="small-square" />
+                class="small-square square-border" />
             <div class="small-star">
                 <i class="fas fa-star fa-sm selected"></i>
                 <i class="fas fa-star fa-sm selected"></i>
@@ -94,7 +94,7 @@
         </div>
         <div class="library__adventure-small-section">
             <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1541083701l/42519279._SY475_.jpg"
-                class="small-square" />
+                class="small-square square-border" />
             <div class="small-star">
                 <i class="fas fa-star fa-sm selected"></i>
                 <i class="fas fa-star fa-sm selected"></i>
