--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
     </div>
     <div>
         <header class="welcome-header">
-            <h1 class="welcome-heade__title">Welcome to Kokoa Clone</h1>
-            <p class="welcome-heade__text">If you have a Kokoa Account, log in with your email or phone number.</p>
+            <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+            <p class="welcome-header__text">If you have a Kokoa Account, log in with your email or phone number.</p>
         </header>
 
-        <form id="Login-form">
-            <input type="text" placeholder="Email or phone number" />
-            <input type="password" placeholder="Password" />
+        <form action="friends.html" nethod="get" id="login-form">
+            <input name="username" type="text" placeholder="Email or phone number" />
+            <input name="password" type="password" placeholder="Password" />
             <input type="submit" value="Log In" />
-            <a href="#">Fined Kokoa Account or Password</a>
+            <a href="#">Find Kokoa Account or Password</a>
         </form>
 
 
